delete all warnings